Fixed image and css issues. Atom was reading inputs incorrectly. Spacing issues with brackets and type issues in HTML.

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -21,12 +21,12 @@ a{
 	Font-size: 42px;
 }
 
-#description p{
-	Font-size: 21px;
-	Color: gray;
+#description{
+  font-size: 21px;
+  color: gray;
 }
 
-#copyright p{
-	Text-align: right;
-	Color: gray;
+#copyright{
+  color: gray;
+  text-align: right;
 }
